Using env variable for server path

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=583252685261-2g7kun2i6l3t7503ru189p9pbvk7kb90.apps.googleusercontent.com
+REACT_APP_SERVER_PATH=https://best-ai-prompts-backend.vercel.app/restapi
